* gc.c (garbage_collect_body): use rb_bug() and explicit error message   instead of using assert().   [Bug #9222]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44166 b2dd03c8-39d4-4d8f-98ff-823fe69b080e